Update ramen timer messages with new encouraging phrases for patience and anticipation

--- a/index.html
+++ b/index.html
@@ -147,12 +147,106 @@
     let talkId = null;
 
     const talks = [
-      "いい感じに待っていこう。",
-      "そろそろいい匂いしてきた？",
-      "フタ、ちゃんと閉めてる？",
-      "今は我慢の時間だよ。",
-      "湯気に注意してね。",
-      "のびないように見張ってるよ。"
+      "あとでちゃんと報われるんダヨー",
+      "あと少しだけ、我慢するんダヨー",
+      "あと少しだけ、耐えるんダヨー",
+      "そのそわそわ、ラーメンにも伝わってるんダヨー",
+      "そのソワソワ、あとで笑い話になるんダヨー",
+      "そのチラ見、回数多すぎるんダヨー",
+      "そのワクワク、もう少し育てるんダヨー",
+      "そのワクワクした顔、もう少しだけ我慢してほしいんダヨー",
+      "そのワクワク顔、保存したいくらいなんダヨー",
+      "その一口のために、今があるんダヨー",
+      "その一口を最高にするための時間なんダヨー",
+      "その一瞬が永遠に感じるの、分かるんダヨー",
+      "その一瞬の判断が、味を左右するんダヨー",
+      "その一瞬の我慢が、全部を決めるんダヨー",
+      "その一瞬を逃さないための時間なんダヨー",
+      "その匂い、もう少しだけ我慢するんダヨー",
+      "その匂いに負けそうなの、可愛いけど我慢するんダヨー",
+      "その手、もう少しだけ止めるんダヨー",
+      "その手、勝手に動きそうになってるんダヨー",
+      "その手、勝手に開けないんダヨー",
+      "その期待、ちゃんと報われるから待つんダヨー",
+      "その期待、ちゃんと裏切らないんダヨー",
+      "その期待、正しい方向なんダヨー",
+      "その期待、裏切らない予定なんダヨー",
+      "その焦り、あとで消えるんダヨー",
+      "その箸、早く動かしたそうなんダヨー",
+      "その視線、フタに刺さってるんダヨー",
+      "その選択が、今日の満足度を決めるんダヨー",
+      "ちゃんと待ってる姿、悪くないんダヨー",
+      "ちゃんと待てたら、きっと美味しくなるんダヨー",
+      "ちゃんと待てたら、オレも満足するんダヨー",
+      "ちゃんと待てたら、誇っていいんダヨー",
+      "ちゃんと待ててるから、ちょっと褒めてやるんダヨー",
+      "ちゃんと待ててるの、オレは見てるんダヨー",
+      "ちゃんと待てる人は、ラーメンにも好かれるんダヨー",
+      "ちゃんと我慢できてて偉いんダヨー",
+      "でもここで我慢できるかどうかなんダヨー",
+      "でもちゃんと待つんダヨー",
+      "まだスタンバイ中だから、落ち着くんダヨー",
+      "まだ完成じゃないから、今は想像だけで食べるんダヨー",
+      "まだ完成形じゃないから、今は静観するんダヨー",
+      "まだ時間あるから、今はフタを信じて大人しく待つんダヨー",
+      "まだ混ぜない方がいいって、顔に書いてあるんダヨー",
+      "まだ食べごろにはなってないから、落ち着くんダヨー",
+      "フタに話しかけそうな顔してるんダヨー",
+      "フタの上で時間が積み重なってるんダヨー",
+      "フタの上に何か置きたくなってる顔してるんダヨー",
+      "フタの下で、ちゃんと育ってるんダヨー",
+      "フタの下で奇跡が起きてるんダヨー",
+      "フタの圧、弱めないんダヨー",
+      "フタの存在を信じるんダヨー",
+      "フタの存在を尊重するんダヨー",
+      "フタの裏を想像してるの、まだ早いんダヨー",
+      "フタの角、ちゃんと押さえてるの偉いんダヨー",
+      "フタを信じて待つのが大人なんダヨー",
+      "フタを信じる者は救われるんダヨー",
+      "フタを押さえる手、いい感じなんダヨー",
+      "フタを押さえる手に、だんだん力入ってきてるんダヨー",
+      "フタを開けた未来と閉じた未来、どっちが幸せか考えるんダヨー",
+      "フタを開ける誘惑、かなり強いんダヨー",
+      "ラーメンはちゃんと準備してるんダヨー",
+      "ラーメンは逃げないけど、時間は大事なんダヨー",
+      "今は「まだ」って顔をしてるんダヨー",
+      "今は「まだだぞ」って時間なんダヨー",
+      "今は「待ち」が一番美味しい選択なんダヨー",
+      "今はじっと待つのが正解なんダヨー",
+      "今はまだ「完成」じゃないんダヨー",
+      "今はまだ夢の途中なんダヨー",
+      "今はまだ完成って顔してないんダヨー",
+      "今はまだ準備段階だって顔してるんダヨー",
+      "今はまだ開けるなって顔なんダヨー",
+      "今はラーメンが本気出す前なんダヨー",
+      "今はラーメンに任せるんダヨー",
+      "今は信じて待つのが正解なんダヨー",
+      "今は信じて待つ時間なんダヨー",
+      "今は完成直前じゃないんダヨー",
+      "今は待ちの姿勢を崩さないんダヨー",
+      "今は待ち時間を噛みしめるんダヨー",
+      "今は待ち時間を楽しむんダヨー",
+      "今は待つことが仕事なんダヨー",
+      "今は待つ時間だから、深呼吸でもするんダヨー",
+      "今は想像で一口食べるんダヨー",
+      "今は我慢力レベル上げ中なんダヨー",
+      "今は我慢大会の時間だと思うんダヨー",
+      "今は時間が味を作ってるんダヨー",
+      "今は期待を温めてる段階なんダヨー",
+      "今は耐久ターン継続中なんダヨー",
+      "今は触らないのが一番なんダヨー",
+      "今は静かに待つんダヨー",
+      "今開けたら、やっぱり早いんダヨー",
+      "今開けたら、オレがじっと見るんダヨー",
+      "今開けたら台無しになる気がするけど、それでも開けるんダヨー？",
+      "今開けると、ちょっと薄い未来になるんダヨー",
+      "今開けると「早かったな」って後悔する未来が見えるんダヨー",
+      "湯の力を信じる時間なんダヨー",
+      "湯気の誘惑に負けそうなの、ちゃんと見てるんダヨー",
+      "箸を持ったまま固まってるの、ちょっと面白いんダヨー",
+      "覗き込みたい気持ちは分かるけど、我慢するんダヨー",
+      "開けたい気持ちを抑えてるの、えらいんダヨー",
+      "今はまだ待ち時間なんダヨー"
     ];
 
     function formatTime() {
