--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <title>キャラ付きラーメンタイマー</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700;800&display=swap"
+    rel="stylesheet">
 
   <style>
     body {
-      font-family: "Segoe UI", "Hiragino Kaku Gothic ProN", sans-serif;
+      font-family: "M PLUS Rounded 1c", "Hiragino Maru Gothic ProN", "ヒラギノ丸ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN", "Yu Gothic Medium", "游ゴシック Medium", "Meiryo", "メイリオ", sans-serif;
       background: linear-gradient(180deg, #fff7e6, #ffe0b2);
       text-align: center;
       min-height: 100vh;
@@ -36,7 +41,8 @@
       background: #fff;
       border-radius: 18px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-      font-size: 15px;
+      font-size: 16px;
+      line-height: 1.6;
       text-align: left;
       transform-origin: left center;
     }
@@ -72,11 +78,13 @@
 
     #message {
       min-height: 40px;
+      letter-spacing: 0.03em;
     }
 
     #time {
       font-size: 22px;
-      font-weight: bold;
+      font-weight: 700;
+      letter-spacing: 0.05em;
       margin: 8px 0;
       text-align: center;
     }
@@ -84,6 +92,7 @@
     button {
       width: 100%;
       font-size: 16px;
+      font-weight: 700;
       padding: 8px;
       border-radius: 12px;
       border: none;
@@ -122,12 +131,61 @@
     .credit a:hover {
       text-decoration: underline;
     }
+
+    /* ===== スマホ縦画面対応 ===== */
+    @media (max-width: 600px) {
+
+      body {
+        padding-top: 20px;
+      }
+
+      h1 {
+        font-size: 20px;
+        margin-bottom: 10px;
+      }
+
+      img {
+        width: 240px;
+      }
+
+      .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .bubble {
+        position: relative;
+        top: auto;
+        left: auto;
+        margin-top: 12px;
+        width: 90%;
+        max-width: 320px;
+        text-align: center;
+      }
+
+      .bubble::after {
+        left: 50%;
+        top: -22px;
+        transform: translateX(-50%);
+        border-right-color: transparent;
+        border-bottom-color: #fff;
+      }
+
+      #time {
+        font-size: 26px;
+      }
+
+      button {
+        font-size: 18px;
+        padding: 12px;
+      }
   </style>
 </head>
 
 <body>
 
-  <h1>🍜 ラーメンタイマー</h1>
+  <h1>🍜 ラーメンタイマー with ミクダヨー</h1>
 
   <div class="container">
     <!--  <img src="character.png" alt="キャラクター"> -->
@@ -135,9 +193,9 @@
 
 
     <div class="bubble pop" id="bubble">
-      <div id="message">準備はいい？</div>
+      <div id="message">準備はいいかヨー？</div>
       <div id="time">03:00</div>
-      <button id="startBtn" onclick="startTimer()">スタート</button>
+      <button id="startBtn" onclick="startTimer()">はじめるヨー</button>
     </div>
   </div>
 
@@ -276,7 +334,7 @@
       if (timerId) return;
 
       document.getElementById("startBtn").classList.add("hide");
-      setMessage("スタート！");
+      setMessage("スタートダヨー！");
 
       timerId = setInterval(() => {
         totalSeconds--;
@@ -285,7 +343,7 @@
         if (totalSeconds <= 0) {
           clearInterval(timerId);
           clearInterval(talkId);
-          setMessage("🍜 できあがり！");
+          setMessage("🍜 できあがりダヨー！");
         }
       }, 1000);
 
