titleタグを変更

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>キャラ付きラーメンタイマー</title>
+  <title>ラーメンタイマー with ミクダヨー</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700;800&display=swap"
@@ -189,7 +189,7 @@
 
   <div class="container">
     <!--  <img src="character.png" alt="キャラクター"> -->
-    <img src="https://special.goodsmile.info/mikudayo10th/images/img_product_a.png" alt="キャラクター">
+    <img src="https://special.goodsmile.info/mikudayo10th/images/img_product_a.png" alt="ミクダヨー">
 
 
     <div class="bubble pop" id="bubble">
