--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>ラーメンタイマー with ミクダヨー</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>🍜 ラーメンタイマー with ミクダヨー</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700;800&display=swap"
@@ -180,6 +181,14 @@
         font-size: 18px;
         padding: 12px;
       }
+
+      .credit {
+        font-size: 9px;
+        padding: 4px 8px;
+        bottom: 5px;
+        right: 5px;
+      }
+    }
   </style>
 </head>
 
